fix sonar issues, refactor and optimize